overflow bug

--- a/Site AJ/style.css
+++ b/Site AJ/style.css
@@ -9,6 +9,11 @@ body{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+html, body {
+  max-width: 100%;
+  overflow-x: hidden;
+}
+
 
 
 /* MENU */
